<resources>
    <string name="app_name">LocalLore</string>
    <string name="title_activity_maps">LocalLore</string>
    <string name="title_activity_add_lore">AddLoreActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_lore_location_title">Lore Location</string>
    <string name="add_lore_title">Lore Title</string>
    <string name="add_lore_story">Add your lore here</string>
    <string name="add_lore_cancel">Cancel</string>
    <string name="add_lore_confirm">Add Lore</string>

    <string name="appwidget_title">Lore Title</string>
    <string name="appwidget_lore">Lore</string>
    <string name="add_widget">Add widget</string>
</resources>
