<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kai.locallore.AddLoreFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/input_padding"
            android:hint="@string/add_lore_title">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_lore_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapSentences"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/add_lore_story" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/input_padding"
            android:hint="@string/add_lore_story">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_lore_story"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapSentences"
                android:minLines="3" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/input_padding"
            android:textSize="28dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/add_lore_location_title"/>
        <TextView
            android:id="@+id/add_lore_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/colorPrimary"
            android:text="Location Placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_lore_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/add_lore_cancel" />

            <Button
                android:id="@+id/add_lore_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/add_lore_confirm" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
